<resources>
    <string name="app_name">Collection</string>

    <string name="nav_cards">Cards</string>
    <string name="nav_card_backs">Card Backs</string>
    <string name="nav_heroes">Heroes</string>
    <string name="nav_decks">Decks</string>

    <string name="nav_rate">Rate!</string>
    <string name="nav_feedback">Send Feedback</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="action_search">Search</string>
    <string name="action_filters">Filters Drawer</string>
    <string name="action_apply">Apply</string>

    <string name="settings_language">Language</string>

    <string name="pref_file_key">com.lourenco.brandon.collectionhs.PREF_FILE_KEY</string>
    <string name="pref_key_locale">pref_locale</string>

    <string name="stat_mana">Mana Cost</string>
    <string name="stat_attack">Attack</string>
    <string name="stat_health">Health</string>
    <string name="stat_durability">Durability</string>
    <string name="stat_health_durability">Health/Durability</string>
    <string name="stat_type">Type</string>
    <string name="stat_set">Set</string>
    <string name="stat_rarity">Rarity</string>
    <string name="stat_race">Minion Type</string>
    <string name="stat_mechanic">Mechanic</string>

    <string name="format">Format</string>

    <string-array name="languages">
        <item>English</item>            <!-- English -->
        <item>Français</item>           <!-- French -->
        <item>Deutsch</item>            <!-- German -->
        <item>한국어</item>              <!-- Korean -->
        <item>Español</item>            <!-- Spanish -->
        <item>Español (Mexico)</item>   <!-- Spanish MX -->
        <item>Русский</item>            <!-- Russian -->
        <item>台語</item>                 <!-- Chinese Taiwan -->
        <item>中文</item>                <!-- Chinese -->
        <item>Italiano</item>           <!-- Italian -->
        <item>Português</item>          <!-- Portuguese BR -->
        <item>Polski</item>             <!-- Polish -->
        <item>日本語</item>              <!-- Japanese -->
        <!--item>ไทย</item-->            <!-- Thai -->
    </string-array>

    <string-array name="languages_values">
        <item>0</item>            <!-- English -->
        <item>2</item>           <!-- French -->
        <item>3</item>            <!-- German -->
        <item>4</item>              <!-- Korean -->
        <item>5</item>            <!-- Spanish -->
        <item>6</item>   <!-- Spanish MX -->
        <item>7</item>            <!-- Russian -->
        <item>8</item>                 <!-- Chinese Taiwan -->
        <item>9</item>                <!-- Chinese -->
        <item>10</item>           <!-- Italian -->
        <item>11</item>          <!-- Portuguese BR -->
        <item>12</item>             <!-- Polish -->
        <item>14</item>              <!-- Japanese -->
        <!--item>15</item-->            <!-- Thai -->
    </string-array>

    <string-array name="classes">
        <item>DRUID</item>
        <item>HUNTER</item>
        <item>MAGE</item>
        <item>PALADIN</item>
        <item>PRIEST</item>
        <item>ROGUE</item>
        <item>SHAMAN</item>
        <item>WARLOCK</item>
        <item>WARRIOR</item>
        <item>NEUTRAL</item>
    </string-array>

    <string-array name="rarity">
        <item>FREE</item>
        <item>COMMON</item>
        <item>RARE</item>
        <item>EPIC</item>
        <item>LEGENDARY</item>
    </string-array>

    <string-array name="card_set_full_names">
        <item>Basic</item>
        <item>Classic</item>
        <item>Hall of Fame</item>
        <item>Curse of Naxxramas</item>
        <item>Goblins vs Gnomes</item>
        <item>Blackrock Mountain</item>
        <item>The Grand Tournament</item>
        <item>The League of Explorers</item>
        <item>Whispers of the Old Gods</item>
        <item>One Night in Karazahn</item>
        <item>Mean Streets of Gadgetzan</item>
        <item>Journey to Un\'Goro</item>
        <item>Knights of the Frozen Throne</item>
    </string-array>

    <string name="set_name_core">Basic</string>
    <string name="set_name_expert">Classic</string>
    <string name="set_name_hof">Hall of Fame</string>
    <string name="set_name_hero_skins">Hero Portraits</string>
    <string name="set_name_naxx">Curse of Naxxramas</string>
    <string name="set_name_gvg">Goblins vs Gnomes</string>
    <string name="set_name_brm">Blackrock Mountain</string>
    <string name="set_name_tgt">The Grand Torunament</string>
    <string name="set_name_loe">League of Explorers</string>
    <string name="set_name_wog">Whispers of the Old Gods</string>
    <string name="set_name_onk">One Knight in Karazhan</string>
    <string name="set_name_msg">Mean Streets of Gadgetzan</string>
    <string name="set_name_jtu">Journey to Un\'Goro</string>
    <string name="set_name_kft">Knights of the Frozen Throne</string>
    <string name="set_name_knc">Kobolds &amp; Catacombs</string>

    <string name="set_acronym_core">Basic</string>
    <string name="set_acronym_expert">Classic</string>
    <string name="set_acronym_hof">HoF</string>
    <string name="set_acronym_hero_skins">Skins</string>
    <string name="set_acronym_naxx">Naxx</string>
    <string name="set_acronym_gvg">GvG</string>
    <string name="set_acronym_brm">BRM</string>
    <string name="set_acronym_tgt">TGT</string>
    <string name="set_acronym_loe">LoE</string>
    <string name="set_acronym_wog">WOG</string>
    <string name="set_acronym_onk">ONK</string>
    <string name="set_acronym_msg">MSG</string>
    <string name="set_acronym_jtu">JtU</string>
    <string name="set_acronym_kft">KFT</string>
    <string name="set_acronym_knc">K&amp;C</string>

    <string-array name="card_set_acronyms">
        <item>Basic</item>
        <item>Classic</item>
        <item>HoF</item>
        <item>Naxx</item>
        <item>GvG</item>
        <item>BRM</item>
        <item>TGT</item>
        <item>LoE</item>
        <item>WOG</item>
        <item>ONK</item>
        <item>MSG</item>
        <item>JtU</item>
        <item>KFT</item>
    </string-array>

    <string-array name="card_types">
        <item>MINION</item>
        <item>SPELL</item>
        <item>WEAPON</item>
        <item>HERO</item>
        <item>HERO POWER</item>
        <item>ENCHANTMENT</item>
    </string-array>

    <string-array name="races">
        <item>MURLOC</item>
        <item>DEMON</item>
        <item>MECH</item>
        <item>BEAST</item>
        <item>TOTEM</item>
        <item>PIRATE</item>
        <item>DRAGON</item>
        <item>ELEMENTAL</item>
    </string-array>
</resources>

